# parameter-identification

./: .gitignore  README.md  main.py  pyproject.toml
docs/: user_guide.md  user_guide_en.md
scripts/: build_nuitka.ps1  compile_ui.ps1
src/parameter_identifier/: __init__.py  __main__.py  version.py
src/parameter_identifier/app/: __init__.py  main.py  main_window.py
src/parameter_identifier/core/: __init__.py  fitness.py  identification.py  material.py  opensees_backend.py  preprocessing.py
src/parameter_identifier/optimizers/: __init__.py  base.py  ga.py  pso.py
src/parameter_identifier/ui/: __init__.py  main_window.ui  ui_main_window.py
tests/: test_core.py  test_opensees_backend.py
